--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 &nbsp; &nbsp; &nbsp; &quot;</span><span style="color: #008000;">&#41;</span><span style="color: #008000;">;</span><br />
 &nbsp; &nbsp; </div>
 		
+		<i>@see</i> <a href='https://github.com/tenbits/flquery/raw/master/FlashFrontend/bin/main.swf'>main.swf</a>
+		<i>@code</i> <a href='https://github.com/tenbits/flquery/blob/master/FlashFrontend/src/Application.as'>Application.as</a>
 		</div>
 		
 		
@@ -110,7 +112,7 @@
 		<div class='description'>
 			This library makes simple to develop FlashLite 3.1 Applications. But does smbd. need this? 
 				<blockquote>
-					I do not know, so i'm developing it for a moment for my use. Write little documentation. If sombody has interests, please mail me.
+					I do not know, so i'm developing it for a moment for my use. Write little documentation. If somebody has interests, please mail me.
 					</blockquote>
 			</div>
 				
